# lake-sandbox

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.dlt/: config.toml
src/lake_sandbox/: __init__.py  cli.py  main.py
src/lake_sandbox/examples/: README.md  analyze_partitioning.py  deltalake_analysis.ipynb  duckdb_analysis.py  query_parcel.py  query_sample.py
src/lake_sandbox/pipeline/: __init__.py  main_pipeline.py  reorganization_stage.py  timeseries_stage.py  validation_stage.py
src/lake_sandbox/reorg_pattern/: __init__.py  phase1_reorganize.py  phase2_delta.py  reorg_generator.py  reorganization.py
src/lake_sandbox/reorg_pattern/delta/: __init__.py  delta.py  delta_partitions.py  partition_manager.py  validation.py
src/lake_sandbox/reorg_pattern/reorganize/: __init__.py  reorg.py  validation.py
src/lake_sandbox/streaming_assembly/: __init__.py  assembly.py
src/lake_sandbox/timeseries_generator/: __init__.py  date_utils.py  generator.py
src/lake_sandbox/utils/: performance.py
src/lake_sandbox/validator/: cross_validation.py  delta.py  models.py  organized.py  raw.py  validation.py
tests/timeseries_generator/: __init__.py  test_date_utils.py
